<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DomainCertificatePinningFragment">

    <TextView
        android:id="@+id/domain_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/domain_label"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_first"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/edit_text_first" />

    <EditText
        android:id="@+id/edit_text_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:lines="1"
        android:maxLines="1"
        android:text="@string/initial_domain"
        app:layout_constraintStart_toEndOf="@id/domain_label"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_first"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:text="@string/next"
        app:layout_constraintBottom_toBottomOf="@id/edit_text_first"
        app:layout_constraintStart_toEndOf="@id/edit_text_first"
        app:layout_constraintTop_toTopOf="@id/edit_text_first" />

    <TextView
        android:id="@+id/local_socket_results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/local_socket_results_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/button_first" />

    <ListView
        android:id="@+id/local_socket_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        app:layout_constraintBaseline_toBaselineOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/local_socket_results_label" />

    <TextView
        android:id="@+id/certist_results_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/certist_results_label"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/local_socket_results" />

    <ListView
        android:id="@+id/certist_results"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certist_results_label" />

    <TextView
        android:id="@+id/do_certificates_match_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_green_dark"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/certist_results" />
</androidx.constraintlayout.widget.ConstraintLayout>